Fix the spacing of the slide panel with the new header height.

--- a/src/components/SlidePanel/_slide-panel.scss
+++ b/src/components/SlidePanel/_slide-panel.scss
@@ -4,7 +4,7 @@
   height: calc(100% - 25px);
   position: absolute;
   right: 0;
-  top: 24px; // height of the top bar
+  top: 40px; // height of the top bar
 
   &--close {
     cursor: pointer;
